# nekoscope

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
docs/: ARCHITECTURE.md  PROVIDER_SETUP.md  RELEASE.md  SECURITY_MODEL.md
examples/neko-repo/: README.md  docker-compose.yml
examples/neko-repo/data/: config-one-line.json
examples/neko-repo/docs/: architecture.md
examples/neko-repo/k8s/: deployment.yaml
examples/neko-repo/mindmaps/: sample.mm  sample.opml
examples/neko-repo/ml/: metrics.json  model_card.md
examples/neko-repo/terraform/: main.tf
scripts/: protect-main.sh  publish-github.sh  verify-local.sh
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: ai.rs  comments.rs  devops.rs  errors.rs  external.rs  file_tree.rs  formatters.rs  ide.rs  link_graph.rs  ml.rs  mod.rs  models.rs  os_hooks.rs  security.rs  settings.rs  watcher.rs
src-tauri/tests/: domain_tests.rs
src/lib/neko/: adrAtlas.ts  aiBridge.test.ts  aiBridge.ts  commandPalette.ts  demoWorkspace.ts  devopsHints.test.ts  devopsHints.ts  diagramGarden.ts  fileTree.ts  folderIndex.ts  formatters.test.ts  formatters.ts  i18n.ts  ideBridge.ts  markdownLens.test.ts  types.ts  (+12 more)
src/routes/: +layout.svelte  +page.svelte
tests/: frontend.test.ts
(+19 files in other folders)
