[package]
name = "nekoscope"
version = "0.1.1"
description = "A fast, calm desktop Markdown viewer."
authors = ["NekoScope contributors"]
license = "MPL-2.0"
edition = "2024"

[lib]
name = "nekoscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
ignore = "0.4"
notify = "8"
opener = { version = "0.8", features = ["reveal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
